# aiohomematic-config

./: .gitignore  .pre-commit-config.yaml  .yamllint  CLAUDE.md  MANIFEST.in  README.md  changelog.md  codecov.yml  pyproject.toml  requirements.txt  requirements_test.txt  requirements_test_pre_commit.txt
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: pre-commit.yml  python-publish.yml  release-on-tag.yml  test-run.yaml
aiohomematic_config/: __init__.py  change_log.py  const.py  exporter.py  form_schema.py  grouping.py  labels.py  link_param_metadata.py  master_profile_store.py  profile_data.py  profile_store.py  schedule_facade.py  session.py  widgets.py
aiohomematic_config/profiles/: ACCESS_RECEIVER.json  ACOUSTIC_SIGNAL_VIRTUAL_RECEIVER.json  ACTOR_SECURITY.json  ACTOR_WINDOW.json  ALARMACTUATOR.json  ALARM_COND_SWITCH_RECEIVER.json  ALARM_SWITCH_VIRTUAL_RECEIVER.json  ARMING.json  AUTO_RELOCK_TRANSCEIVER.json  BLIND.json  BLIND_VIRTUAL_RECEIVER.json  CLIMATECONTROL_FLOOR_PUMP_TRANSCEIVER.json  CLIMATECONTROL_FLOOR_TRANSCEIVER.json  CLIMATECONTROL_INPUT_RECEIVER.json  CLIMATECONTROL_RECEIVER.json  CLIMATECONTROL_RT_RECEIVER.json  CLIMATECONTROL_VENT_DRIVE.json  DDC.json  DIMMER.json  DIMMER_VIRTUAL_RECEIVER.json  DIMMER_woLongKeyPress.json  DOOR_LOCK_TRANSCEIVER.json  DOOR_RECEIVER.json  DUAL_WHITE_BRIGHTNESS.json  DUAL_WHITE_COLOR.json  HEATING_CLIMATECONTROL_CL_RECEIVER.json  HEATING_CLIMATECONTROL_RECEIVER.json  HEATING_KEY_RECEIVER.json  HEATING_ROOM_TH_RECEIVER.json  HMW_BLIND.json  HMW_DIMMER.json  HMW_INPUT_OUTPUT.json  HMW_SWITCH.json  JALOUSIE.json  KEYMATIC.json  REMOTECONTROL_RECEIVER.json  RGBW_AUTOMATIC.json  RGBW_COLOR.json  SERVO_VIRTUAL_RECEIVER.json  SHUTTER_VIRTUAL_RECEIVER.json  (+26 more)
aiohomematic_config/translations/: de.json  en.json
docs/: api.md  architecture.md  implementation_plan.md
script/: check_i18n.py  check_i18n_catalogs.py  lint_all_exports.py  lint_kwonly.py  lint_package_imports.py  parse_easymode_profiles.py  sort_class_members.py
tests/: __init__.py  bandit.yaml  conftest.py  test_change_log.py  test_exporter.py  test_form_schema.py  test_grouping.py  test_labels.py  test_link_param_metadata.py  test_master_profile_store.py  test_profile_store.py  test_schedule_facade.py  test_session.py  test_widgets.py
tests/helpers/: __init__.py  parameter_data_factory.py
