[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name        = "aiohomematic-config"
dynamic = ["version"]
license     = {text = "MIT License"}
description = "Presentation-layer library for Homematic device configuration UI."
readme      = "README.md"
authors     = [
    {name = "SukramJ", email = "sukramj@icloud.com"},
]
keywords    = ["home", "automation", "homematic", "configuration", "paramset"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: German",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "aiohomematic>=2026.2.20",
    "pydantic>=2.10.0",
]

[project.urls]
"Homepage" = "https://github.com/sukramj/aiohomematic-config"
"Source Code" = "https://github.com/sukramj/aiohomematic-config"
"Bug Reports" = "https://github.com/sukramj/aiohomematic-config/issues"
"Changelog" = "https://github.com/sukramj/aiohomematic-config/blob/devel/changelog.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "aiohomematic_config.const.VERSION"}

[tool.setuptools.packages.find]
include = ["aiohomematic_config", "aiohomematic_config.*"]
exclude = ["tests", "tests.*", "dist", "build"]

[tool.setuptools.package-data]
aiohomematic_config = ["py.typed", "profiles/*.json"]

# ---------------------------------------------------------------------------
# pylint
# ---------------------------------------------------------------------------

[tool.pylint.MAIN]
py-version = "3.13"
ignore = ["tests"]
jobs = 2
init-hook = """\
    from pathlib import Path; \
    import sys; \
\
    from pylint.config import find_default_config_files; \
\
    sys.path.append( \
        str(Path(next(find_default_config_files())).parent.joinpath('pylint/plugins'))
    ); \
    sys.path.append(".") \
    """
load-plugins = [
    "pylint.extensions.code_style",
    "pylint.extensions.typing",
    "pylint_strict_informational",
    "pylint_per_file_ignores",
]
persistent = false
extension-pkg-allow-list = ["orjson"]

[tool.pylint.BASIC]
class-const-naming-style = "any"
good-names = ["_", "ev", "ex", "fp", "i", "id", "j", "k", "T"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "format",
    "abstract-method",
    "broad-except",
    "cyclic-import",
    "duplicate-code",
    "inconsistent-return-statements",
    "import-outside-toplevel",
    "locally-disabled",
    "not-context-manager",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "too-many-boolean-expressions",
    "wrong-import-order",
    "consider-using-namedtuple-or-dataclass",
    # Handled by ruff
    "await-outside-async",
    "bad-str-strip-call",
    "bad-string-format-type",
    "bidirectional-unicode",
    "continue-in-finally",
    "duplicate-bases",
    "format-needs-mapping",
    "function-redefined",
    "invalid-all-format",
    "invalid-all-object",
    "invalid-character-backspace",
    "invalid-character-esc",
    "invalid-character-nul",
    "invalid-character-sub",
    "invalid-character-zero-width-space",
    "logging-too-few-args",
    "logging-too-many-args",
    "missing-format-string-key",
    "mixed-format-string",
    "no-method-argument",
    "no-self-argument",
    "nonexistent-operator",
    "nonlocal-without-binding",
    "not-in-loop",
    "notimplemented-raised",
    "return-in-init",
    "return-outside-function",
    "syntax-error",
    "too-few-format-args",
    "too-many-format-args",
    "too-many-star-expressions",
    "truncated-format-string",
    "undefined-all-variable",
    "undefined-variable",
    "used-prior-global-declaration",
    "yield-inside-async-function",
    "yield-outside-function",
    "anomalous-backslash-in-string",
    "assert-on-string-literal",
    "assert-on-tuple",
    "bad-format-string",
    "bad-format-string-key",
    "bare-except",
    "binary-op-exception",
    "cell-var-from-loop",
    "duplicate-except",
    "duplicate-key",
    "duplicate-string-formatting-argument",
    "duplicate-value",
    "eval-used",
    "exec-used",
    "f-string-without-interpolation",
    "forgotten-debug-statement",
    "format-string-without-interpolation",
    "global-variable-not-assigned",
    "import-self",
    "inconsistent-quotes",
    "invalid-envvar-default",
    "keyword-arg-before-vararg",
    "logging-format-interpolation",
    "logging-fstring-interpolation",
    "logging-not-lazy",
    "misplaced-future",
    "named-expr-without-context",
    "nested-min-max",
    "raise-missing-from",
    "try-except-raise",
    "unused-argument",
    "unused-format-string-argument",
    "unused-format-string-key",
    "unused-import",
    "unused-variable",
    "useless-else-on-loop",
    "wildcard-import",
    "bad-classmethod-argument",
    "consider-iterating-dictionary",
    "empty-docstring",
    "invalid-name",
    "line-too-long",
    "missing-class-docstring",
    "missing-final-newline",
    "missing-function-docstring",
    "missing-module-docstring",
    "multiple-imports",
    "no-else-raise",
    "no-else-return",
    "singleton-comparison",
    "subprocess-run-check",
    "superfluous-parens",
    "ungrouped-imports",
    "unidiomatic-typecheck",
    "unnecessary-direct-lambda-call",
    "unnecessary-lambda-assignment",
    "unneeded-not",
    "useless-import-alias",
    "wrong-import-position",
    "comparison-of-constants",
    "comparison-with-itself",
    "consider-alternative-union-syntax",
    "consider-merging-isinstance",
    "consider-using-alias",
    "consider-using-dict-comprehension",
    "consider-using-generator",
    "consider-using-get",
    "consider-using-set-comprehension",
    "consider-using-sys-exit",
    "consider-using-ternary",
    "literal-comparison",
    "property-with-parameters",
    "super-with-arguments",
    "too-many-branches",
    "too-many-return-statements",
    "too-many-statements",
    "trailing-comma-tuple",
    "unnecessary-comprehension",
    "use-a-generator",
    "use-dict-literal",
    "use-list-literal",
    "useless-object-inheritance",
    "useless-return",
    # Handled by mypy
    "abstract-class-instantiated",
    "arguments-differ",
    "assigning-non-slot",
    "assignment-from-no-return",
    "assignment-from-none",
    "bad-exception-cause",
    "bad-format-character",
    "bad-reversed-sequence",
    "bad-super-call",
    "bad-thread-instantiation",
    "catching-non-exception",
    "comparison-with-callable",
    "deprecated-class",
    "dict-iter-missing-items",
    "format-combined-specification",
    "global-variable-undefined",
    "import-error",
    "inconsistent-mro",
    "inherit-non-class",
    "init-is-generator",
    "invalid-class-object",
    "invalid-enum-extension",
    "invalid-envvar-value",
    "invalid-format-returned",
    "invalid-hash-returned",
    "invalid-metaclass",
    "invalid-overridden-method",
    "invalid-repr-returned",
    "invalid-sequence-index",
    "invalid-slice-index",
    "invalid-slots-object",
    "invalid-slots",
    "invalid-star-assignment-target",
    "invalid-str-returned",
    "invalid-unary-operand-type",
    "invalid-unicode-codec",
    "isinstance-second-argument-not-valid-type",
    "method-hidden",
    "misplaced-format-function",
    "missing-format-argument-key",
    "missing-format-attribute",
    "missing-kwoa",
    "no-member",
    "no-value-for-parameter",
    "non-iterator-returned",
    "non-str-assignment-to-dunder-name",
    "nonlocal-and-global",
    "not-a-mapping",
    "not-an-iterable",
    "not-async-context-manager",
    "not-callable",
    "overridden-final-method",
    "raising-bad-type",
    "raising-non-exception",
    "redundant-keyword-arg",
    "relative-beyond-top-level",
    "self-cls-assignment",
    "signature-differs",
    "star-needs-assignment-target",
    "subclassed-final-class",
    "super-without-brackets",
    "too-many-function-args",
    "typevar-double-variance",
    "typevar-name-mismatch",
    "unbalanced-dict-unpacking",
    "unbalanced-tuple-unpacking",
    "unexpected-keyword-arg",
    "unhashable-member",
    "unpacking-non-sequence",
    "unsubscriptable-object",
    "unsupported-assignment-operation",
    "unsupported-binary-operation",
    "unsupported-delete-operation",
    "unsupported-membership-test",
    "used-before-assignment",
    "using-final-decorator-in-unsupported-version",
    "wrong-exception-operation",
]
enable = [
    "useless-suppression",
    "use-symbolic-message-instead",
]

[tool.pylint.REPORTS]
score = false

[tool.pylint.TYPECHECK]
ignored-classes = ["_CountingAttr"]
mixin-class-rgx = ".*[Mm]ix[Ii]n"

[tool.pylint.FORMAT]
expected-line-ending-format = "LF"

[tool.pylint.EXCEPTIONS]
overgeneral-exceptions = ["builtins.Exception"]

[tool.pylint.TYPING]
runtime-typing = false

[tool.pylint.CODE_STYLE]
max-line-length-suggestions = 120

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
pythonpath = [".", "aiohomematic_config"]
testpaths = ["tests"]
norecursedirs = [".git", "testing_config"]
log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(threadName)s %(name)s:%(filename)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py313"
line-length = 120

lint.select = [
    "A",
    "ASYNC",
    "B002", "B005", "B007", "B014", "B015", "B018", "B023", "B026", "B032", "B904",
    "C",
    "COM818",
    "D",
    "DTZ003", "DTZ004",
    "E",
    "F",
    "FLY",
    "G",
    "I",
    "INP",
    "ISC",
    "ICN001",
    "LOG",
    "N804", "N805", "N815",
    "PERF",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PYI",
    "RET",
    "RSE",
    "RUF005", "RUF006", "RUF013", "RUF018", "RUF100",
    "S102", "S103", "S108", "S306", "S307",
    "S313", "S314", "S315", "S316", "S317", "S318", "S319",
    "S601", "S602", "S604", "S608", "S609",
    "SIM",
    "SLOT",
    "T100", "T20",
    "TID251",
    "TRY",
    "TC",
    "FURB",
    "UP",
    "W",
]

lint.ignore = [
    "A005",
    "D202", "D203", "D212", "D406", "D407",
    "E501", "E731",
    "PLC1901",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "PLW2901",
    "PT011", "PT012", "PT018",
    "SIM115",
    "TRY003", "TRY400",
    "UP040",
    # May conflict with the formatter
    "W191", "E111", "E114", "E117",
    "D206", "D300",
    "Q", "COM812", "COM819", "ISC001",
    "RET503",
    "TRY301",
    "PYI041",
    # TC rules - low benefit for this project
    "TC001", "TC002", "TC003", "TC006",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
"aiohomematic_config" = "hmcfg"

[tool.ruff.lint.per-file-ignores]
"script/*" = ["T20"]
"tests/*.py" = ["D100", "D101", "D102", "D103", "D107", "TRY002"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
required-imports = ["from __future__ import annotations"]
known-first-party = ["aiohomematic_config"]
known-third-party = ["pydantic", "aiohomematic"]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 25

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------

[tool.coverage.run]
branch = true
source = ["aiohomematic_config"]
omit = [
    "aiohomematic_config/const.py",
]
parallel = true

[tool.coverage.report]
show_missing = true
skip_empty = true
skip_covered = false
sort = "cover"
precision = 2
fail_under = 85.0
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
    "@abstractmethod",
    "@abc.abstractmethod",
    "\\.\\.\\.",
    "except ImportError:",
]

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy"]
strict = true
show_error_codes = true
follow_imports = "normal"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = "(?x)(^build/|^dist/|^htmlcov/|^.*\\.egg-info/|^venv/|^script/)"
enable_error_code = [
    "ignore-without-code",
    "redundant-self",
    "truthy-iterable",
]
disable_error_code = [
    "annotation-unchecked",
    "import-not-found",
    "import-untyped",
]
extra_checks = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true
